--- a/packages/theme/src/button.scss
+++ b/packages/theme/src/button.scss
@@ -17,7 +17,7 @@
   line-height: 1;
   white-space: nowrap;
   outline: none;
-  transition: 0.1s;
+  transition: all .2s cubic-bezier(.645,.045,.355,1);
   cursor: pointer;
   text-align: center;
   box-sizing: border-box;
@@ -28,7 +28,7 @@
   border: 1px solid;
   border-color: get-css-var('button', 'border-color');
   padding: 8px 15px;
-  border-radius: 3px;
+  border-radius: 4px;
 
   &:hover,
   &:focus {
@@ -36,5 +36,18 @@
     border-color: get-css-var('button', 'hover', 'border-color');
     background-color: get-css-var('button', 'hover', 'bg-color');
     outline: none;
+  }
+
+  @include when(round) {
+    border-radius: 500px;
+  }
+
+  @include when(circle) {
+    border-radius: 50%;
+    padding: 8px;
+  }
+
+  @include when(disabled) {
+    cursor: not-allowed;
   }
 }
