--- a/packages/theme/src/button-group.scss
+++ b/packages/theme/src/button-group.scss
@@ -1,7 +1,28 @@
+@use "./mixins/config.scss" as *;
 @use "./mixins/mixins.scss" as *;
 @use "./mixins/function.scss" as *;
 
 @include b(button-group) {
   display: inline-block;
   vertical-align: middle;
+
+  & .#{$namespace}-button {
+    &:first-child {
+      border-top-right-radius: 0;
+      border-bottom-right-radius: 0;
+    }
+
+    &:last-child {
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0;
+    }
+
+    &:not(:first-child, :last-child) {
+      border-radius: 0;
+    }
+
+    &:not(:last-child) {
+      margin-right: -1px;
+    }
+  }
 }
