update：开发表单组件

--- a/packages/theme/src/form-item.scss
+++ b/packages/theme/src/form-item.scss
@@ -6,6 +6,7 @@
   --y-form-item-font-size: var(--y-color-font-size);
   --y-form-item-error-font-size: var(--y-color-font-size-ms);
   --y-form-item-error-color: var(--y-color-error);
+  --y-form-item-disabled-opacity: var(--y-color-disabled-opacity)
 }
 
 @include b(form-item) {
@@ -16,6 +17,11 @@
 
   @include when(column) {
     flex-direction: column;
+  }
+
+  @include when(disabled) {
+    cursor: not-allowed;
+    opacity: var(--y-form-item-disabled-opacity);
   }
 
   @include e(title) {
