--- a/packages/theme/src/button.scss
+++ b/packages/theme/src/button.scss
@@ -5,13 +5,31 @@
 @include b(button) {
   --y-button-text-color: var(--y-color-text-1);
   --y-button-border-color: var(--y-color-border-1);
+  --y-button-before-bg-color: var(--y-color-theme);
+  --y-button-before-border-color: var(--y-color-theme);
   --y-button-hover-text-color: var(--y-base-color);
   --y-button-hover-bg-color: var(--y-color-primary-1);
   --y-button-hover-border-color: var(--y-color-primary-3);
   --y-button-disabled-opacity: var(--y-color-disabled-opacity);
+  --y-button-primary-bg-color: var(--y-color-primary);
+  --y-button-primary-border-color: var(--y-color-primary);
+  --y-button-primary-text-color: var(--y-color-theme);
+  --y-button-success-bg-color: var(--y-color-success);
+  --y-button-success-border-color: var(--y-color-success);
+  --y-button-success-text-color: var(--y-color-theme);
+  --y-button-warning-bg-color: var(--y-color-warning);
+  --y-button-warning-border-color: var(--y-color-warning);
+  --y-button-warning-text-color: var(--y-color-theme);
+  --y-button-error-bg-color: var(--y-color-error);
+  --y-button-error-border-color: var(--y-color-error);
+  --y-button-error-text-color: var(--y-color-theme);
+  --y-button-info-bg-color: var(--y-color-info);
+  --y-button-info-border-color: var(--y-color-info);
+  --y-button-info-text-color: var(--y-color-theme);
 }
 
 @include b(button) {
+  position: relative;
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -31,16 +49,27 @@
   padding: 8px 15px;
   border-radius: 4px;
 
+  &::before {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    background: var(--y-button-before-bg-color);
+    border: inherit;
+    border-color: var(--y-button-before-border-color);
+    border-radius: inherit;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    content: ' ';
+  }
+
   &:hover,
   &:focus {
     color: get-css-var('button', 'hover', 'text-color');
     border-color: get-css-var('button', 'hover', 'border-color');
     background-color: get-css-var('button', 'hover', 'bg-color');
     outline: none;
-  }
-
-  &:active {
-    // color: ;
   }
 
   @include when(round) {
@@ -54,6 +83,18 @@
 
   @include when(disabled) {
     cursor: not-allowed;
-    opacity: var(--y-button-disabled-opacity);
+    opacity: get-css-var('button', 'disabled', 'opacity');
+  }
+
+  @each $type in (primary, success, warning, error, info) {
+    @include when($type) {
+      border-color: get-css-var('button', $type, 'border-color');
+      background-color: get-css-var('button', $type, 'bg-color');
+      color: get-css-var('button', $type, 'text-color');
+  
+      &:active::before, &:hover::before {
+        opacity: 0.1;
+      }
+    }
   }
 }
