--- a/packages/theme/src/index.scss
+++ b/packages/theme/src/index.scss
@@ -4,4 +4,5 @@
 @use "./row.scss";
 @use "./button-group.scss";
 @use "./input.scss";
-@use "./form-item.scss"
+@use "./form-item.scss";
+@use "./checkbox.scss";
