--- a/packages/theme/src/checkbox.scss
+++ b/packages/theme/src/checkbox.scss
@@ -17,7 +17,7 @@
   position: relative;
   white-space: nowrap;
   cursor: pointer;
-  align-items: baseline;
+  align-items: center;
   font-size: var(--y-checkbox-font-size);
   color: var(--y-checkbox-text-color);
 
