fixed：修改css变量的定义

--- a/packages/theme/src/button.scss
+++ b/packages/theme/src/button.scss
@@ -10,7 +10,7 @@
   --y-button-hover-text-color: var(--y-base-color);
   --y-button-hover-bg-color: var(--y-color-primary-1);
   --y-button-hover-border-color: var(--y-color-primary-3);
-  --y-button-disabled-opacity: var(--y-color-disabled-opacity);
+  --y-button-disabled-opacity: var(--y-disabled-opacity);
   --y-button-primary-bg-color: var(--y-color-primary);
   --y-button-primary-border-color: var(--y-color-primary);
   --y-button-primary-text-color: var(--y-color-theme);
