flexed：重新设计表格组件的交互

--- a/packages/theme/src/input.scss
+++ b/packages/theme/src/input.scss
@@ -53,7 +53,7 @@
     border: 1px solid;
     border-color: var(--y-input-border-color);
       
-    &:hover {
+    &:not(.is-disabled):hover {
       border-color: var(--y-input-hover-border-color);
       border-inline-end-width: 1px;
     }
@@ -62,8 +62,12 @@
   @include when(disabled) {
     cursor: not-allowed;
     opacity: var(--y-input-disabled-opacity);
+
+    input {
+      cursor: not-allowed;
+    }
   }
-  
+
   @include when(focus) {
     border-color: var(--y-input-focus-border-color);
     box-shadow: 0 0 0 2px var(--y-input-focus-shadow-color);
