feat：开发checkboxGroup组件的disabled功能

--- a/packages/theme/src/checkbox.scss
+++ b/packages/theme/src/checkbox.scss
@@ -49,6 +49,10 @@
       margin: 0;
       width: var(--y-checkbox-size);
       height: var(--y-checkbox-size);
+
+      &[disabled] {
+        cursor: not-allowed;
+      }
     }
 
     @include when(checked) {
