--- a/packages/theme/src/switch.scss
+++ b/packages/theme/src/switch.scss
@@ -43,7 +43,7 @@
     overflow: hidden;
     pointer-events: none;
     visibility: hidden;
-    
+
   }
 
   @include e(inner) {
@@ -52,6 +52,23 @@
 
   @include when(checked) {
     background-color: var(--y-switch-active-color);
+
+    &::after {
+      box-sizing: border-box;
+      position: absolute;
+      top: 0;
+      inset-inline-start: 0;
+      width: 100%;
+      height: 100%;
+      border: 2px solid var(--y-switch-active-color);
+      animation-name: checkbox-checked-animation;
+      animation-duration: 0.3s;
+      animation-timing-function: ease-in-out;
+      content: "";
+      transition: all 0.3s;
+      animation-fill-mode: forwards;
+      border-radius: var(--y-switch-height);
+    }
 
     #{'.' + $b + $element-separator + 'handle'} {
       left: calc(100% - var(--y-switch-handle) - var(--y-switch-offset));
