--- a/packages/theme/src/form-item.scss
+++ b/packages/theme/src/form-item.scss
@@ -2,7 +2,7 @@
 @use "./mixins/function.scss" as *;
 
 @include b(form-item) {
-  --y-form-item-text-color: var(--y-color-text-1);
+  --y-form-item-text-color: var(--y-color-text);
   --y-form-item-font-size: var(--y-font-size);
   --y-form-item-error-font-size: var(--y-font-size-ms);
   --y-form-item-error-color: var(--y-color-error);
