--- a/packages/theme/src/index.scss
+++ b/packages/theme/src/index.scss
@@ -8,4 +8,5 @@
 @use "./checkbox.scss";
 @use "./checkbox-group.scss";
 @use "./switch.scss";
-@use "./tooltip.scss"
+@use "./tooltip.scss";
+@use "./dropdown.scss";
