--- a/packages/theme/src/dropdown.scss
+++ b/packages/theme/src/dropdown.scss
@@ -3,11 +3,22 @@
 @use "./mixins/config.scss" as *;
 
 @include b(dropdown) {
+  --y-bg-color-overlay: var(--y-color-bg-elevated);
+  --y-box-shadow: 0 0 6px var(--y-color-fill-quaternary);
+}
+
+@include b(dropdown) {
   @include e(title) {
     display: inline-flex;
   }
 
   @include e(content) {
-    background-color: var();
+    --y-bg-color-overlay: var(--y-color-bg-elevated);
+    --y-box-shadow: 0 0 6px var(--y-color-text-quaternary);
+
+    padding: 5px 0;
+    background-color: var(--y-bg-color-overlay);
+    box-shadow: var(--y-box-shadow);
+    border-radius: 3px;
   }
 }
