--- a/packages/theme/src/input.scss
+++ b/packages/theme/src/input.scss
@@ -40,6 +40,7 @@
       width: 100%;
       font-size: var(--y-input-font-size);
       color: var(--y-input-text-color);
+      background-color: transparent;
   
       &:focus {
         outline: none;
