fix：重新修改tooltip组件

--- a/packages/theme/src/dropdown.scss
+++ b/packages/theme/src/dropdown.scss
@@ -6,18 +6,22 @@
   @include e(title) {
     display: inline-flex;
     color: var(--y-color-text);
+    font-size: var(--y-font-size);
   }
 
-  @include e(content) {
-    --y-bg-color-overlay: var(--y-color-bg-elevated);
-    --y-box-shadow: 0 0 6px var(--y-color-fill-quaternary);
-  
-    padding: 5px 0;
-    border-radius: 3px;
-    color: var(--y-color-text);
-    box-shadow: var(--y-box-shadow);
-    background-color: var(--y-bg-color-overlay);
+  @include e(menus) {
+    padding: 0;
+    margin: 0;
+  }
 
-    
+  @include e(menu) {
+    padding: 5px 12px;
+    list-style: none;
+    cursor: pointer;
+
+    &:hover {
+      color: var(--y-hover-text-color);
+      background-color: var(--y-hover-bg-color);
+    }
   }
 }
