--- a/packages/theme/src/tooltip.scss
+++ b/packages/theme/src/tooltip.scss
@@ -3,21 +3,14 @@
 @use "./mixins/mixins.scss" as *;
 
 @include b(tooltip-content) {
+  --y-hover-text-color: var(--y-color-primary);
+  --y-hover-bg-color: var(--y-color-primary-1);
   --y-bg-color-overlay: var(--y-color-bg-elevated);
-  --y-box-shadow: 0 0 6px var(--y-color-fill-quaternary);
+  --y-box-shadow: 0 0 6px var(--y-color-fill);
   
-  padding: 5px 0;
   border-radius: 3px;
   color: var(--y-color-text);
+  font-size: var(--y-font-size);
   box-shadow: var(--y-box-shadow);
   background-color: var(--y-bg-color-overlay);
-
-  @include e(menus) {
-    padding: 0;
-    margin: 0;
-  }
-
-  @include e(menu) {
-    list-style: none;
-  }
 }
