--- a/packages/theme/src/index.scss
+++ b/packages/theme/src/index.scss
@@ -1,4 +1,5 @@
 @use "./common/var.scss";
+@use "./common/transition.scss";
 @use "./button.scss";
 @use "./col.scss";
 @use "./row.scss";
@@ -10,3 +11,4 @@
 @use "./switch.scss";
 @use "./tooltip.scss";
 @use "./dropdown.scss";
+@use "./overlay.scss";
