--- a/packages/theme/src/message.scss
+++ b/packages/theme/src/message.scss
@@ -3,12 +3,22 @@
 @use "./mixins/config.scss" as *;
 
 @include b(message) {
+  --y-message-bg-color: var(--y-color-bg-elevated);
+  --y-message-text-color: var(--y-color-text);
+  --y-message-font-size: var(--y-font-size);
+
   position: fixed;
   left: 50%;
   top: 20px;
   transform: translateX(-50%);
   display: flex;
   align-items: center;
+  padding: 9px 12px;
+  font-size: var(--y-message-font-size);
+  color: var(--y-message-text-color);
+  background-color: var(--y-message-bg-color);
+  transition: all 0.4s;
+  border-radius: 4px;
 
   @include when(center) {
     justify-content: center;
