--- a/packages/theme/src/message.scss
+++ b/packages/theme/src/message.scss
@@ -9,7 +9,6 @@
 
   position: fixed;
   left: 50%;
-  top: 20px;
   transform: translateX(-50%);
   display: flex;
   align-items: center;
@@ -17,8 +16,9 @@
   font-size: var(--y-message-font-size);
   color: var(--y-message-text-color);
   background-color: var(--y-message-bg-color);
-  transition: all 0.4s;
+  transition: opacity 0.3s, transform 0.4s, top 0.4s;
   border-radius: 4px;
+  box-shadow: 0 3px 6px -4px rgb(0 0 0 / 12%), 0 6px 16px 0 rgb(0 0 0 / 8%), 0 9px 28px 8px rgb(0 0 0 / 5%);
 
   @include when(center) {
     justify-content: center;
