fixed：修改button组件暗黑模式背景不显示问题

--- a/packages/theme/src/button.scss
+++ b/packages/theme/src/button.scss
@@ -26,6 +26,7 @@
   --y-button-info-bg-color: var(--y-color-info);
   --y-button-info-border-color: var(--y-color-info);
   --y-button-info-text-color: #fff;
+  --y-button-bg-color: var(--y-color-theme);
 }
 
 @include b(button) {
