--- a/packages/theme/src/button-group.scss
+++ b/packages/theme/src/button-group.scss
@@ -3,7 +3,7 @@
 @use "./mixins/function.scss" as *;
 
 @include b(button-group) {
-  --y-button-group-border-color: var(--y-border-color);
+  --y-button-group-border-color: var(--y-color-border);
 
   display: inline-block;
   vertical-align: middle;
@@ -12,16 +12,27 @@
     border-left-color: var(--y-button-group-border-color);
     border-right-color: var(--y-button-group-border-color);
 
+    &[class*="is-"] {
+      border-left-color: #fff;
+      border-right-color: #fff;
+    }
+
     &:first-child {
       border-top-right-radius: 0;
       border-bottom-right-radius: 0;
-      border-left-color: transparent;
+
+      &[class*="is-"] {
+        border-left-color: transparent;
+      }
     }
 
     &:last-child {
       border-top-left-radius: 0;
       border-bottom-left-radius: 0;
-      border-right-color: transparent;
+
+      &[class*="is-"] {
+        border-right-color: transparent;
+      }
     }
 
     &:not(:first-child, :last-child) {
