--- a/packages/theme/src/common/transition.scss
+++ b/packages/theme/src/common/transition.scss
@@ -24,3 +24,21 @@ $transition-md-fade: transform .3s cubic-bezier(.23, 1, .32, 1), opacity .3s cub
   opacity: 0;
   transform: scaleY(0);
 }
+
+.#{$namespace}-ellipsis-enter-from, .#{$namespace}-ellipsis-leave-to {
+  opacity: 0;
+  transform: scale(.85);
+}
+
+.#{$namespace}-ellipsis-enter-to, .#{$namespace}-ellipsis-leave-from {
+  transform: scale(1);
+  opacity: 1;
+}
+
+.#{$namespace}-ellipsis-enter-active {
+  transition: opacity .15s cubic-bezier(0, 0, .2, 1), transform .15s cubic-bezier(0, 0, .2, 1);
+}
+
+.#{$namespace}-ellipsis-leave-active {
+  transition: opacity .15s cubic-bezier(.4, 0, 1, 1), transform .15s cubic-bezier(.4, 0, 1, 1);
+}
