--- a/packages/theme/src/mixins/mixins.scss
+++ b/packages/theme/src/mixins/mixins.scss
@@ -20,6 +20,17 @@
   }
 }
 
+@mixin m($modifier) {
+  $m: $modifier !global;
+  $bem: $be + $modifier-separator + $modifier !global;
+
+  @at-root {
+    #{'.' + $bem} {
+      @content;
+    }
+  }
+}
+
 @mixin when($state) {
   @at-root {
     &.#{$state-prefix + $state} {
